--- a/vaadincloudapp/pom.xml
+++ b/vaadincloudapp/pom.xml
@@ -12,6 +12,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<vaadin.version>7.1.11</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+
+		<jelastic.user>jukka.nikki@kolumbus.fi</jelastic.user>
+		<jelastic.password>${cloud.pw}</jelastic.password>
+		<jelastic.domain>nikkijuk</jelastic.domain>
+		<jelastic.environment>nikkijuk</jelastic.environment>
+		<jelastic.context>vaadincloudapp</jelastic.context>
+		<jelastic.comment>Jelastic deployed vaadin app</jelastic.comment>
+		<jelastic.api_hoster>app.jelastic.servint.net</jelastic.api_hoster>
+	
 	</properties>
 	<repositories>
 		<repository>
@@ -184,12 +193,12 @@
 				<artifactId>jelastic-maven-plugin</artifactId>
 				<version>1.7</version>
 				<configuration>
-					<email>jukka.nikki@kolumbus.fi</email>
-					<password>FwmmPD8lrd</password>
-					<context>vaadincloudapp</context>
-					<environment>nikkijuk</environment>
-					<comment>vaadin, here we come</comment>
-					<api_hoster>app.jelastic.servint.net</api_hoster>
+					<email>${jelastic.user}</email>
+					<password>${jelastic.password}</password>
+					<context>${jelastic.context}</context>
+					<environment>${jelastic.environment}</environment>
+					<comment>${jelastic.comment}</comment>
+					<api_hoster>${jelastic.api_hoster}</api_hoster>
 				</configuration>
 			</plugin>
 
